# nonebot-plugin-qrcode

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
nonebot_plugin_qrcode/: __init__.py  data_source.py
