[project]
name = "nonebot-plugin-qrcode"
version = "0.1.0"
description = "QQ聊天二维码插件"
authors = ["kexue <x@kexue-cloud.cn>", "Eilles <EillesWan@outlook.com>"]
license = "MIT"
homepage = "https://github.com/kexue-z/nonebot-plugin-qrcode"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arclet-alconna>=1.8.32",
    "arclet-alconna-tools>=0.7.10",
    "httpx>=0.27.2",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-alconna>=0.53.1",
    "nonebot-plugin-waiter>=0.8.0",
    "nonebot2>=2.4.0",
    "pillow>=11.0.0",
    "pyzbar-x>=0.2.1",
    "qrcode>=8.0",
]
